dialogs fixes added fix for to where component on mobile devices

--- a/src/app/create-hallpass-forms/main-hallpass--form/main-hall-pass-form.component.scss
+++ b/src/app/create-hallpass-forms/main-hallpass--form/main-hall-pass-form.component.scss
@@ -1,19 +1,30 @@
-@media screen and (max-width: 335px) {
+@media all and (min-width: 320px) and (max-width: 360px) {
   div.fixed-card {
-    width: 256px !important;
+    width: 300px !important;
+  }
+
+  div.fixed-card-wrapper {
+    width: 300px !important;
   }
 }
 
-@media screen and (max-width: 1024px) {
-  .fixed-card {
+@media all and (min-width: 360px) and (max-width: 1024px) {
+  div.fixed-card {
     width: 335px !important;
-    height: 500px !important;
-    left: 50%;
-    transform: translateX(-50%);
   }
 
-  .fixed-card-wrapper {
-    width: initial !important;
+  div.fixed-card-wrapper {
+    width: 335px !important;
+  }
+}
+
+
+@media all and (max-width: 1024px) {
+
+  div.fixed-card {
+    left: 50%;
+    transform: translateX(-50%);
+    height: 500px !important;
   }
 
   .form {
